--- a/JST/app/src/main/res/layout/activity_add_job.xml
+++ b/JST/app/src/main/res/layout/activity_add_job.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddJobActivity">
+    tools:context=".AddEditJobActivity">
 
     <EditText
         android:id="@+id/edit_text_title"
