--- a/JST/app/src/main/res/layout/activity_main.xml
+++ b/JST/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:padding="4dp"
+        android:scrollbars="vertical"
         tools:listitem="@layout/job_item"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -22,5 +25,7 @@
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
